--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
+    "@reduxjs/toolkit": "^1.8.5",
     "preact": "^10.9.0",
     "preact-router": "^4.1.0",
     "react": "npm:@preact/compat@^17.1.1",
