--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "preact": "^10.9.0",
     "preact-router": "^4.1.0",
     "react": "npm:@preact/compat@^17.1.1",
-    "react-dom": "npm:@preact/compat@^17.1.1"
+    "react-dom": "npm:@preact/compat@^17.1.1",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.3.0",
