--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "preact-router": "^4.1.0",
     "react": "npm:@preact/compat@^17.1.1",
     "react-dom": "npm:@preact/compat@^17.1.1",
-    "react-redux": "^8.0.2"
+    "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
+    "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.3.0",
