--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
     "@reduxjs/toolkit": "^1.8.5",
+    "@sweetalert2/theme-material-ui": "^5.0.12",
     "preact": "^10.9.0",
     "preact-router": "^4.1.0",
     "react": "npm:@preact/compat@^17.1.1",
     "react-dom": "npm:@preact/compat@^17.1.1",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "sweetalert2": "^11.4.29"
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.3.0",
