--- a/package.json
+++ b/package.json
@@ -6,15 +6,20 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
     "@mui/material": "^5.10.2",
     "@reduxjs/toolkit": "^1.8.5",
     "@sweetalert2/theme-material-ui": "^5.0.12",
+    "babel-jest": "^29.0.1",
+    "jest": "^29.0.1",
     "preact": "^10.9.0",
     "preact-router": "^4.1.0",
     "react": "npm:@preact/compat@^17.1.1",
@@ -26,6 +31,10 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.3.0",
-    "vite": "^3.0.0"
+    "@testing-library/preact": "^3.2.2",
+    "@types/jest": "^29.0.0",
+    "jest-environment-jsdom": "^29.0.1",
+    "vite": "^3.0.0",
+    "whatwg-fetch": "^3.6.2"
   }
 }
