--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "test": "jest --watchAll"
   },
   "dependencies": {
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-react": "^7.18.6",
     "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.10.0",
     "@mui/icons-material": "^5.10.2",
@@ -19,6 +17,7 @@
     "@reduxjs/toolkit": "^1.8.5",
     "@sweetalert2/theme-material-ui": "^5.0.12",
     "babel-jest": "^29.0.1",
+    "htm": "^3.1.1",
     "jest": "^29.0.1",
     "preact": "^10.9.0",
     "preact-router": "^4.1.0",
@@ -30,9 +29,18 @@
     "sweetalert2": "^11.4.29"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-react": "^7.18.6",
     "@preact/preset-vite": "^2.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/preact": "^3.2.2",
     "@types/jest": "^29.0.0",
+    "babel-preset-preact": "^2.0.0",
     "jest-environment-jsdom": "^29.0.1",
     "vite": "^3.0.0",
     "whatwg-fetch": "^3.6.2"
