Added test at PhoneCard component and verifyInputValue helper

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.10.2",
     "@reduxjs/toolkit": "^1.8.5",
     "@sweetalert2/theme-material-ui": "^5.0.12",
+    "@testing-library/dom": "^8.17.1",
     "babel-jest": "^29.0.1",
     "htm": "^3.1.1",
     "jest": "^29.0.1",
@@ -39,6 +40,7 @@
     "@preact/preset-vite": "^2.3.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/preact": "^3.2.2",
+    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.0.0",
     "babel-preset-preact": "^2.0.0",
     "jest-environment-jsdom": "^29.0.1",
