--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "eslint --ext .jsx,.js src"
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -43,8 +44,13 @@
     "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.0.0",
     "babel-preset-preact": "^2.0.0",
+    "eslint": "^8.24.0",
+    "eslint-config-preact": "^1.3.0",
     "jest-environment-jsdom": "^29.0.1",
     "vite": "^3.0.0",
     "whatwg-fetch": "^3.6.2"
+  },
+  "eslintConfig": {
+    "extends": "preact"
   }
 }
