--- a/package.json
+++ b/package.json
@@ -11,44 +11,44 @@
     "lint": "eslint --ext .jsx,.js src"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/icons-material": "^5.10.2",
-    "@mui/material": "^5.10.2",
-    "@reduxjs/toolkit": "^1.8.5",
-    "@sweetalert2/theme-material-ui": "^5.0.12",
-    "@testing-library/dom": "^8.17.1",
-    "babel-jest": "^29.0.1",
-    "htm": "^3.1.1",
-    "jest": "^29.0.1",
-    "preact": "^10.9.0",
-    "preact-router": "^4.1.0",
+    "@emotion/react": "11.10.0",
+    "@emotion/styled": "11.10.0",
+    "@mui/icons-material": "5.10.2",
+    "@mui/material": "5.10.2",
+    "@reduxjs/toolkit": "1.8.5",
+    "@sweetalert2/theme-material-ui": "5.0.12",
+    "@testing-library/dom": "8.17.1",
+    "babel-jest": "29.0.1",
+    "htm": "3.1.1",
+    "jest": "29.0.1",
+    "preact": "10.9.0",
+    "preact-router": "4.1.0",
     "react": "npm:@preact/compat@^17.1.1",
     "react-dom": "npm:@preact/compat@^17.1.1",
-    "react-redux": "^8.0.2",
-    "react-router": "^6.3.0",
-    "react-router-dom": "^6.3.0",
-    "sweetalert2": "^11.4.29"
+    "react-redux": "8.0.2",
+    "react-router": "6.3.0",
+    "react-router-dom": "6.3.0",
+    "sweetalert2": "^11.4.8"
   },
   "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.6.0",
-    "@babel/plugin-transform-react-jsx": "^7.3.0",
-    "@babel/preset-env": "^7.18.10",
-    "@babel/preset-react": "^7.18.6",
-    "@preact/preset-vite": "^2.3.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/preact": "^3.2.2",
-    "@testing-library/react": "^13.4.0",
-    "@types/jest": "^29.0.0",
-    "babel-preset-preact": "^2.0.0",
-    "eslint": "^8.24.0",
-    "eslint-config-preact": "^1.3.0",
-    "jest-environment-jsdom": "^29.0.1",
-    "vite": "^3.0.0",
-    "whatwg-fetch": "^3.6.2"
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "7.5.5",
+    "@babel/plugin-proposal-class-properties": "7.5.5",
+    "@babel/plugin-transform-modules-commonjs": "7.6.0",
+    "@babel/plugin-transform-react-jsx": "7.3.0",
+    "@babel/preset-env": "7.18.10",
+    "@babel/preset-react": "7.18.6",
+    "@preact/preset-vite": "2.3.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@testing-library/preact": "3.2.2",
+    "@testing-library/react": "13.4.0",
+    "@types/jest": "29.0.0",
+    "babel-preset-preact": "2.0.0",
+    "eslint": "8.24.0",
+    "eslint-config-preact": "1.3.0",
+    "jest-environment-jsdom": "29.0.1",
+    "vite": "3.0.0",
+    "whatwg-fetch": "3.6.2"
   },
   "eslintConfig": {
     "extends": "preact"
